<resources>
    <string name="app_name">HotShot</string>
    <string name="pozostalo">zostało</string>
    <string name="serviceName">HotShotServices</string>
    <string name="strona_internetowa">STRONA INTERNETOWA</string>
    <string name="follw">ŚLEDŹ</string>
    <string name="notify">POWIADOM</string>
    <string name="title_activity_show_image">ShowImage</string>
    <string name="refreshing">Odświeżanie</string>
    <string name="wszystko">wszystko</string>
    <string name="elektornika">sprzęt</string>
    <string name="różne">różne</string>
    <string name="ksi_ki">książki</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="strony">Ustawienia</string>
    <string name="o_aplikacji">O aplikacji</string>
    <string name="napisz_do_nas">Napisz do nas</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="okazje">Okazje</string>
    <string name="warning">Ostrzeżenie</string>
    <string name="sledz_duze">ŚLEDŹ</string>
    <string name="powiadom_duze">POWIADOM</string>
    <string name="line">-</string>
    <string name="kiedy_pojawi_si_nowa_okazja_na_wybranej_stronie_aplikacja_powiadomi_o_tym_u_ydkownika">Kiedy pojawi się nowa okazja na wybranej stronie, aplikacja powiadomi  użytkownika</string>
    <string name="led_gor_ce_okazje_pojawiaj_ce_si_na_wskazanej_stronie_i_pokazuj_je_na_listach">Śledź gorące okazje pojawiające się na wskazanej stronie i pokazuj je na listach</string>
    <string name="ocen">Oceń</string>
    <string name="ubrania">ubrania</string>

    <!--Ustawienia-->
    <string name="synchronizuj_w_tle">Synchronizacja ofert w tle</string>
    <string name="synchronizuj">Synchronizuj</string>
    <string name="tylko_z_wifi">Tylko z Wi-fi</string>
    <string name="nowe_oferty">Oferty i Powiadomienia</string>
    <string name="powiadomienia">Powiadomienia</string>
    <string name="aktualizacje_opcje">Sprawdzaj aktualizacje</string>
    <string name="strony_powiadomienia">Strony i powiadomienia</string>
    <string name="wibracje">Wibracje</string>
    <string name="wlaczone">Aktywne</string>
    <string name="wylaczone">Niekatywne</string>

    <string name="transition_image">transition_image</string>

    <string name="key_check_for_updates">key_check_for_updates</string>
    <string name="key_sync_background">key_sync_bacground</string>
    <string name="key_sync_wifi">key_sync_wifi</string>
    <string name="key_notyfication">key_notyfication</string>
    <string name="key_vibration">key_vibration</string>
    <string name="aktualizacja">Nowa wersja aplikacji HotShot jest gotowa do pobrania. Aby śledzić aktualne gorące oferty, zalecamy aktualizację aplikacji do najnowszej dostępnej wersji.</string>
    <string name="refresht_data">Przesuń w dół aby odświeżyć dane</string>
</resources>
