<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFF"
    >
    <TextView
        style="@style/HeaderTextView"
        android:layout_weight="1"
        android:paddingLeft="12sp"
        android:paddingRight="2sp"
        android:text="@string/strona_internetowa"/>
    <TextView
        style="@style/HeaderTextView"
        android:layout_weight="2"
        android:text="@string/follw"
        android:textAlignment="center"/>
    <TextView
        style="@style/HeaderTextView"
        android:layout_weight="2"
        android:text="@string/notify"
        android:textAlignment="center"/>
</LinearLayout>